@@ -149,13 +149,26 @@ void ImgCell::Destroy()
 
 void ImgCell::RecalculateWidths(CellParser& parser, int fontsize)
 {
+  int height;
   if (m_bitmap != NULL)
-    m_width = m_bitmap->GetWidth() + 2;
+  {
+    height = m_bitmap->GetHeight() + 2;
+    m_width  = m_bitmap->GetWidth()  + 2;
+  }
   else
-    m_width = 0;
+  {
+    height = 0;
+    m_width  = 0;
+    }
 
   double scale = parser.GetScale();
   scale = MAX(scale, 1.0);
+
+  // Shrink to .9* the canvas size
+  if(scale * m_width > .9 * m_canvasSize.x)
+    scale = .9 * m_canvasSize.x / m_width;
+  if(scale * height > .9 * m_canvasSize.y)
+    scale = .9 * m_canvasSize.y / height;
 
   m_width = (int) (scale * m_width);
   ResetData();
@@ -163,13 +176,26 @@ void ImgCell::RecalculateWidths(CellParser& parser, int fontsize)
 
 void ImgCell::RecalculateSize(CellParser& parser, int fontsize)
 {
+  int width;
   if (m_bitmap != NULL)
+  {
     m_height = m_bitmap->GetHeight() + 2;
+    width  = m_bitmap->GetWidth()  + 2;
+  }
   else
+  {
     m_height = 0;
-
+    width  = 0;
+  }
+  
   double scale = parser.GetScale();
   scale = MAX(scale, 1.0);
+  
+  // Shrink to .9* the canvas size
+  if(scale * width > .9 * m_canvasSize.x)
+    scale = .9 * m_canvasSize.x / width;
+  if(scale * m_height > .9 * m_canvasSize.y)
+    scale = .9 * m_canvasSize.y / m_height;
 
   m_height= (int) (scale * m_height);
 
@@ -186,20 +212,40 @@ void ImgCell::Draw(CellParser& parser, wxPoint point, int fontsize)
     double scale = parser.GetScale();
     scale = MAX(scale, 1.0);
 
+    if (m_bitmap != NULL)
+    {
+      m_height = m_bitmap->GetHeight() + 2;
+      m_width  = m_bitmap->GetWidth()  + 2;
+    }
+    else
+    {
+      m_height = 0;
+      m_width  = 0;
+    }
+    
+    // Shrink to .9* the canvas size
+    if(scale * m_width > .9 * m_canvasSize.x)
+      scale = .9 * m_canvasSize.x / m_width;
+    if(scale * m_height > .9 * m_canvasSize.y)
+      scale = .9 * m_canvasSize.y / m_height;
+
     SetPen(parser);
     if (m_drawRectangle)
-      dc.DrawRectangle(wxRect(point.x, point.y - m_center, m_width, m_height));
+      
+      dc.DrawRectangle(wxRect(point.x, point.y - m_center, scale * m_width + 2, scale *m_height + 2));  
 
     if (scale != 1.0)
     {
       wxImage img = m_bitmap->ConvertToImage();
-      img.Rescale(m_width, m_height);
+      img.Rescale(m_width * scale, m_height * scale,wxIMAGE_QUALITY_BICUBIC);
 
       wxBitmap bmp = img;
       bitmapDC.SelectObject(bmp);
     }
     else
+    {
       bitmapDC.SelectObject(*m_bitmap);
+    }
 
     dc.Blit(point.x + 1, point.y - m_center + 1, m_width, m_height, &bitmapDC, 0, 0);
   }
