@@ -3,6 +3,7 @@ Current:
   * An option to not export maxima's input as well as the output.
   * Allow Extending selection from part of a single cell to multiple cells.
   * An option to use High-resolution bitmaps for the HTML export.
+  * Images that are too big for the window now are displayed in a scaled-down version.
 
 15.04.0:
   * wxWidgets 3.0 is now a mandatory requirement
